@@ -14,3 +14,9 @@ dependencies {
   compile group: 'findbugs', name: 'annotations', version: '1.0.0'
   compile group: 'xerces', name: 'xercesImpl', version: '2.11.0'
 }
+
+if (JavaVersion.current().isJava9Compatible()) {
+	tasks.withType(JavaCompile) {
+		options.compilerArgs.addAll(['--add-modules', 'java.xml.bind'])
+    }
+}  
